sandbox/output
PatientTest.java:8: error: cannot find symbol
        Prescription prescription = new Prescription(dispenseDate, 30);
                                                     ^
  symbol:   variable dispenseDate
  location: class PatientTest
PatientTest.java:9: error: cannot find symbol
        Medicine codeine = new Codeine(Arrays.asList(prescription));
                                       ^
  symbol:   variable Arrays
  location: class PatientTest
PatientTest.java:10: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
PatientTest.java:10: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                      ^
  symbol:   variable Arrays
  location: class PatientTest
PatientTest.java:10: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                        ^
  symbol:   variable patient
  location: class PatientTest
5 errors
